--- a/index.html
+++ b/index.html
@@ -5,24 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Recipe - JavaScrip API</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section>
         <div class="container">
             <h1 class="brand">Food Recipe</h1>
-            <form action="">
-                <input type="text" placeholder="Search food here..." >
+            <form action="" class="input-form">
+                <input type="text" class="user-input" placeholder="Search food here..." >
+                <span class="search-icon"> <i class='bx bx-search'></i></span>
             </form>
             <div class="search-result">
+
                 <div class="item">
-                    <img src="https://img.freepik.com/free-photo/crispy-fried-chicken-plate-with-salad-carrot_1150-20212.jpg?size=626&ext=jpg&ga=GA1.2.1027490706.1664928892&semt=sph" alt="">
+                    <img src="https://img.freepik.com/free-photo/crispy-fried-chicken-plate-with-salad-carrot_1150-20212.jpg?size=626&ext=jpg&ga=GA1.2.1027490706.1664928892&semt=sph" alt="Recipe">
                     <div class="item-footer">
-                        <h3>This is a food recipe</h3>
-                        <a href="#">Veiw Recipe</a>
+                        <h3 class="food-title">This is a food recipe</h3>
+                        <p class="food-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, aperiam? Quo, molestiae</p>
+                        <a href="#" class="btn view-btn">Veiw Recipe</a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, aperiam? Quo, molestiae</p>
                 </div>
+
+                <div class="item">
+                    <img src="https://img.freepik.com/free-photo/crispy-fried-chicken-plate-with-salad-carrot_1150-20212.jpg?size=626&ext=jpg&ga=GA1.2.1027490706.1664928892&semt=sph" alt="Recipe">
+                    <div class="item-footer">
+                        <h3 class="food-title">This is a food recipe</h3>
+                        <p class="food-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, aperiam? Quo, molestiae</p>
+                        <a href="#" class="btn view-btn" >Veiw Recipe</a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="https://img.freepik.com/free-photo/crispy-fried-chicken-plate-with-salad-carrot_1150-20212.jpg?size=626&ext=jpg&ga=GA1.2.1027490706.1664928892&semt=sph" alt="Recipe">
+                    <div class="item-footer">
+                        <h3 class="food-title">This is a food recipe</h3>
+                        <p class="food-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, aperiam? Quo, molestiae</p>
+                        <a href="#" class="btn view-btn">Veiw Recipe</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
